# smartgoalwebapp

./: .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  cloudbuild.yaml  components 2.json  package 2.json  package-lock.json  package.json
frontend/public/: index 2.html
frontend/src/: App 2.jsx  App.jsx  index 2.jsx
frontend/src/auth/: firebase.js
frontend/src/contexts/: AuthContext.js
frontend/src/hooks/: useGoalForm.js  useGoals.jsx
frontend/src/services/: goalsService.js  remindersService.js
frontend/src/styles/: globals.css
public/: index.html
src/: App.jsx
src/components/DropdownMenu/: DropdownMenu.jsx
src/components/Footer/: Footer.jsx
src/components/GeneratedTitleDisplay/: GeneratedTitleDisplay.jsx
src/components/GoalCard/: GoalCard.css  GoalCard.jsx
src/components/GoalsForm/: GeneratedTitleDisplay.jsx  GoalsForm.css  GoalsForm.jsx  LoadingBubbles.css
src/components/GoalsFormCard/: GoalsForm.css  GoalsForm.jsx
src/components/GoalsPage/: GoalsForm.jsx
src/components/Header/: Header.css  Header.jsx
src/components/History/: History.css  History.jsx
src/components/NotificationBadge/: NotificationBadge.css
src/hooks/: useGoalForm.js  useGoals.jsx
src/models/: Goal.js
src/services/: titleGenerationService.js
src/styles/: globals.css
src/utils/: debounce.js  goalFormUtils.js  goalValidation.js
(+29 files in other folders)
